Implementacion Api y otros ajustes de errores